--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ html{
 
 
 body{
-  height: 1000000px;
   font-family: "Inter", sans-serif;
 }
 
@@ -368,6 +367,35 @@ nav ul li a:hover{
     margin-top: 2rem;
 }
 
+
+footer{
+    background-color: #000;
+    color: #fff;
+    padding: 20rem 0 3rem 0;
+    text-align: center;
+}
+
+.footer__social-links{
+    display: flex;
+    justify-content: center;
+    gap: 3rem;
+    margin-bottom: 2rem;
+    border-bottom: 1px solid rgba(255,255,255,.2);
+    padding: 2rem;
+}
+
+.footer__link{
+    font-size: 2.5rem;
+    color: #fff ;
+    text-decoration: none;
+    align-items: center;
+    display: flex;
+    gap: 1rem;
+}
+
+.footer__copy-right{
+    font-size: 1.6rem;
+}
 
 /* 
 .skills {
