--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+
+
+
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -82,15 +88,12 @@ nav ul li a:hover{
     background-image: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)),url(../img/ales-nesetril-Im7lZjxeLhg-unsplash.jpg);
     background-size: cover;
     height: 100vh;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
     color: #fff;
-    text-align: center;
     /* clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%); */
       /* clip-path: ellipse(130vw 100vw at 50vw 100vw); */
-
     position: relative;
+    text-align: center;
+    background-position: center;
 }
 
 
@@ -129,21 +132,20 @@ nav ul li a:hover{
     background-color: #000;
     /* padding: 25rem 0; */
     padding: 15rem 0;
-    display: inline-block;
+    /* display: inline-block; */
     /* margin-top: -20vh; */
     color: #fff;
 }
 .about{
     display: flex;
     justify-content: center;
-    gap: 2rem;
+    gap: 4rem;
 }
 .section-about__text{
     /* margin-right: 2rem; */
     /* margin: auto; */
 }
 .section-about__image{
-    width: 10%;
     /* margin: auto; */
     /* justify-self: flex-end; */
 }
@@ -191,6 +193,8 @@ nav ul li a:hover{
     margin-top: 2rem;
     font-weight: bold;
     display: inline-block;
+    text-align: center;
+    
 }
 
 .cv-button a:hover{
@@ -393,6 +397,11 @@ footer{
     gap: 1rem;
 }
 
+.footer__link:hover{
+        color: #F06000;
+
+}
+
 .footer__copy-right{
     font-size: 1.6rem;
 }
@@ -487,3 +496,100 @@ footer{
         width: 90%;
     }
 }  */
+
+
+@media screen and (max-width:68.187em) {
+    html{
+        font-size: 56.25%;
+    }
+    .main-message h1{
+        font-size: 4rem;
+    }
+
+    .main-message p{
+        font-size: 1.6rem;
+    }
+    .about{
+        gap: 6rem;
+    }
+    .cv-button a{
+        padding: 1rem 1rem;
+        font-size: 1rem;
+        width: 10rem;
+    }
+    .container{
+        padding: 0 4rem;
+    }
+        
+    .footer__link{
+        font-size: 2rem;
+    }
+}
+
+@media screen and (max-width: 56.25em) {
+    html{
+        font-size: 50%;
+    }
+     .about{
+        gap:10rem;
+    }
+    /*
+    .cv-button a{
+        padding: 1rem 1rem;
+        font-size: 1rem;
+        width: 10rem;
+    }
+    .container{
+        padding: 0 4rem;
+    }
+    .footer__link{
+        font-size: 1.6rem;
+    } */
+    .section-about__contact-details{
+        display: block;
+    }
+    .cv-button a{
+        width: 100%;
+    }
+    footer{
+        padding: 10rem 0 3rem 0;
+    }
+}
+
+@media screen and (max-width:36.68em) {
+    .about{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 6rem;
+    }
+    html{
+        font-size: 43.75%;
+    }
+    .section-about__about-me{
+        margin-bottom: 6rem;
+        text-align: left;
+    }
+
+    .section-about__about-me p{
+        text-align: left;
+    }
+
+    .section-about__contact-details{
+        text-align: left;
+    }
+    .skills {
+        grid-template-columns: 1fr;
+        gap: 2.5rem;
+    }
+    .projects{
+        grid-template-columns: 1fr;
+    }
+    .main-message h1{
+        font-size: 2.5rem;
+    }
+
+    .main-message p{
+        font-size: 1.4rem;
+    }
+}
